# rust_auth_service

./: Cargo.toml  README.md  yarte.toml
migrations/2020-04-10-153346_users/: up.sql
migrations/2020-04-10-153354_confirmations/: down.sql  up.sql
src/: auth_handler.rs  email_service.rs  errors.rs  main.rs  models.rs  password_handler.rs  register_handler.rs  schema.rs  templates.rs  utils.rs  vars.rs
templates/includes/: head.hbs  message.hbs
templates/layouts/: base.hbs
templates/pages/: me.hbs  password.hbs  register.hbs  sign_in.hbs
