[package]
name = "auth_service"
version = "0.1.0"
authors = ["Uk <ukchukundah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0"
actix-session = "0.3"
actix-web = "2.0"
argonautica = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
lettre = { git = "https://github.com/lettre/lettre" }
native-tls = "0.2.4"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
yarte = { version = "0.7", features = ["with-actix-web"]  }

[build-dependencies]
yarte = { version = "0.7", features = ["with-actix-web"]  }